force-app/main/default/objects/VirtualBankAccount__c/VirtualBankAccount__c.object-meta.xml
<CustomObject>
    <label>バーチャル口座</label>
    <nameField>
        <displayFormat>VB-{0000000}</displayFormat>
        <label>バーチャル口座名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>