force-app/main/default/objects/VirtualBankAccount__c/fields/GrantedDateTime__c.field-meta.xml
<CustomField>
    <fullName>GrantedDateTime__c</fullName>
    <label>付与日時</label>
    <type>DateTime</type>
</CustomField>