force-app/main/default/objects/VirtualBankAccount__c/fields/TargetAccount__c.field-meta.xml
<CustomField>
    <fullName>TargetAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>付与対象取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>バーチャル口座</relationshipLabel>
    <relationshipName>VirtualBankAccountTargetAccount</relationshipName>
    <type>Lookup</type>
</CustomField>