force-app/main/default/objects/VirtualBankAccount__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>使用済</label>
    <type>Checkbox</type>
</CustomField>