force-app/main/default/objects/VirtualBankAccount__c/fields/VirtualAccountBank__c.field-meta.xml
<CustomField>
    <fullName>VirtualAccountBank__c</fullName>
    <label>バーチャル口座銀行・支店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>