force-app/main/default/objects/VirtualBankAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>VirtualAccountBank__c</columns>
    <columns>VirtualAccountNumber__c</columns>
    <columns>GrantedDateTime__c</columns>
    <columns>Used__c</columns>
    <columns>TargetAccount__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>